RESOLVED FIXED 263019
[IFC][Partial layout] Incorrect invalidation position when damaged text offset is after last display box
https://bugs.webkit.org/show_bug.cgi?id=263019
Summary [IFC][Partial layout] Incorrect invalidation position when damaged text offse...
zalan
Reported 2023-10-11 09:30:58 PDT
Attachments
[fast-cq]Patch (3.55 KB, patch)
2023-10-11 09:31 PDT, zalan
no flags
zalan
Comment 1 2023-10-11 09:31:57 PDT
Created attachment 468173 [details] [fast-cq]Patch
EWS
Comment 2 2023-10-11 14:28:37 PDT
Commit message contains (OOPS!) and no reviewer found, blocking PR #None
zalan
Comment 3 2023-10-11 15:09:10 PDT
(In reply to EWS from comment #2) > Commit message contains (OOPS!) and no reviewer found, blocking PR #None oops.
EWS
Comment 4 2023-10-12 06:24:04 PDT
Committed 269249@main (626ccb564f1b): <https://commits.webkit.org/269249@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468173 [details].
Note You need to log in before you can comment on or make changes to this bug.