[IFC][Partial layout] Incorrect invalidation position when damaged text offset is after last display box https://bugs.webkit.org/show_bug.cgi?id=263019 <rdar://116448136>

Reviewed by Antti Koivisto.

* LayoutTests/fast/text/partial-text-invalidation-with-first-letter-crash-expected.txt: Added.
* LayoutTests/fast/text/partial-text-invalidation-with-first-letter-crash.html: Added.
* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineInvalidation.cpp:
(WebCore::Layout::damagedLineIndex):

Canonical link: https://commits.webkit.org/269249@main